// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`config initially, should be filled with default value 1`] = `[]`;

exports[`config initially, should be filled with default value 2`] = `
{
  "foo": "bar",
}
`;

exports[`config should be set and get a object correctly 1`] = `
[
  [
    {
      "another": {
        "a": "b",
        "c": 187,
      },
      "foo": "bar",
      "path": {
        "to": {
          "value": "Dead Beef",
        },
      },
    },
    undefined,
    2,
  ],
]
`;

exports[`config should be set and get a object correctly 2`] = `"CSON Stringified"`;

exports[`config should be set and get a string correctly 1`] = `
[
  [
    {
      "foo": "bar",
      "path": {
        "to": {
          "value": "Dead Beef",
        },
      },
    },
    undefined,
    2,
  ],
]
`;

exports[`config should be set and get a string correctly 2`] = `"CSON Stringified"`;
